# BEqCritic

./: .gitignore  Makefile  README.md  README_BEQCRITIC.md  REPORT.md  SETUP.md  beqplus_ab_results_proofnetverif_test_selfbleu_vs_groupsplit_hybrid_a07_simplek5_drop01.jsonl  beqplus_ab_results_proofnetverif_test_selfbleu_vs_groupsplit_simplek5_drop01.jsonl  beqplus_ab_results_proofnetverif_test_selfbleu_vs_groupsplit_thr02_tri02_sup07.jsonl  beqplus_results_proofnetverif_test_groupsplit_global_medoid_mean.jsonl  beqplus_results_proofnetverif_test_groupsplit_simplek2.jsonl  beqplus_results_proofnetverif_test_groupsplit_simplek3.jsonl  beqplus_results_proofnetverif_test_groupsplit_simplek3_drop005.jsonl  pyproject.toml  selections_beqcritic_tuned_thr03_mk3_tri02_sup06_rankprod_fbbleu_min2.jsonl  selections_beqcritic_tuned_thr04_tri03_sup07.jsonl  selections_beqcritic_tuned_thr05_mk3_tri02_sup06.jsonl  selections_beqcritic_tuned_validbest_thr04_mk4_tri00_sup06.jsonl  selections_beqcritic_typechecked.jsonl  selections_groupsplit_global_medoid_mean.jsonl  selections_groupsplit_hybrid_a07_thr02_sup07_medoid_simplek5_drop01.jsonl  selections_groupsplit_thr02_tri02_sup07_medoid_simplek3.jsonl  selections_groupsplit_thr02_tri02_sup07_medoid_simplek3_drop01.jsonl  selections_groupsplit_thr02_tri02_sup07_medoid_simplek5_drop005.jsonl  selections_groupsplit_thr06_tri00_sup07.jsonl  selections_selfbleu_typechecked.jsonl
artifacts/: README.md
beq_critic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
beqcritic/: __init__.py  analyze_beqplus_vs_labels.py  audit.py  (+42 more)
(+136 files in other folders)
