[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beq-critic"
version = "0.2.0"
description = "Learned equivalence scorer for Lean autoformalization candidates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["datasets", "transformers", "torch", "numpy", "accelerate"]

[project.optional-dependencies]
beqplus = ["lean-interact"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
